src/main/webapp/style.css
/* ... */
input.invalid + label {
  color: #A01208 !important;
}

select {
  width: 350px;
}

.hidden {
  display: none;
}

.visible {
  display: inline;
}

#titlebar {
  clear: both;
  padding: 0 10px;
  background-color: white;
  border-color: #F3F6F9;
  border-style: solid;
  border-width: 0 0 4px 0;
}

#titlebar::after {
  content: "";
  clear: both;
  display: table;
}

.breadcrumbpath {
  font-family: "Noto Emoji", Martian, monaco, monospace;
  font-weight: 700;
  font-size: 9pt;
  background-color: #F3F6F9;
  border-color: #F3F6F9;
  border-style: solid;
  border-width: 0 0 4px 0;
}

.breadcrumbpath [class*="col-"] {
  padding: 10px 0;
}

.breadcrumbpath .row-section {
  padding-bottom: 0;
}

.breadcrumbpath .nextlevel {
  font-size: 24px;
  margin: -10px 0;
  vertical-align: top;
  display: inline-block;
  font-weight: normal;
}

.status {
  color: #888888;
}

#content-pane {
  padding: 10px 0;
  margin-top: 20px;
  margin-bottom: 60px;
}

#content-pane.plain {
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

#content-pane.full {
  width: auto;
  margin-left: 20px;
  margin-right: 20px;
  padding: 10px 20px;
}

.typetag {
  color: white;
  font-size: 12px;
  padding: 2px 5px;
  margin-right: 2px;
  background-color: #aaa;
  border-radius: 3px;
  white-space: nowrap;
}

.positivetag {
  font-size: 14px;
  padding: 4px 10px;
  margin-left: 10px;
  background-color: #c2f2cc;
  border-radius: 3px;
  white-space: nowrap;
}

.meta-action {
  margin: 15px 3px 0 3px;
}

.meta {
  color: #222;
  margin: 10px 10px 0 3px;
  font-weight: bold;
}

a.meta:hover, a.meta:active, .meta a:hover, .meta a:active {
  color: #aaa;
}

.postmeta {
  margin: 0 10px 10px 5px;
  color: #222;
}

.typetag a, .typetag a:hover, .typetag a:active {
  color: white;
}

.positive {
  color: #26A008;
}

.negative {
  color: #A01208;
}

.valueitem {
  margin: 2px 6px 2px 0;
  overflow-wrap: anywhere;
  display: inline-block;
  vertical-align: top;
}

.valueitem:empty {
  display: none;
}

.valueitem span {
  vertical-align: top;
}

.fullstop {
  margin: 2px;
  display: inline;
  vertical-align: middle;
  position: relative;
  top: 2px;
}


.quote {
  padding: 2px;
  display: inline-block;
}

.graphheader {
  margin-bottom: 1.5mm;
}

.graphsubheader {
  margin-top: 1.5mm;
  margin-bottom: 0;
}

.assertionsection {
  padding-left: 10px;
  margin-left: -20px;
  border-style: solid;
  border-width: 0 0 0 10px;
  border-color: #ffbb00;
}

.assertionsection .graphheader strong {
  color: #ffbb00;
  font-size: 14pt;
  font-family: "Noto Emoji", Martian, monaco, monospace;
  font-weight: 700;
  margin-right: 15px;
}

.provsection {
  padding-left: 10px;
  margin-left: -20px;
  border-style: solid;
  border-width: 0 0 0 10px;
  border-color: #8d3b72;
}

.provsection .graphheader strong {
  color: #8d3b72;
  font-size: 14pt;
  font-family: "Noto Emoji", Martian, monaco, monospace;
  font-weight: 700;
  margin-right: 15px;
}

.pubinfosection {
  padding-left: 10px;
  margin-left: -20px;
  border-style: solid;
  border-width: 0 0 0 10px;
  border-color: #325981;
}

.pubinfosection .graphheader strong {
  color: #325981;
  font-size: 14pt;
  font-family: "Noto Emoji", Martian, monaco, monospace;
  font-weight: 700;
  margin-right: 15px;
}

.templatename {
  font-weight: 700;
}

.nanopub a {
  color: #444;
  padding: 2px;
  margin: 1px;
}

.nanopub a:hover {
  color: #666;
}

.nanopub a:active {
  color: #666;
}

.nanopub {
  position: relative;
  color: #000;
  margin: 0 0 0 0;
  padding: 0.1px 3px 3px 3px;
  border-radius: 13px;
}

div.nanopub-prefixes {
  display: none;
  margin-top: 3px;
}

div.nanopub-head {
  display: none;
  background: #e8e8e8;
  padding: 10px;
  margin-top: 3px;
  border-radius: 10px;
}

.nanopub {
  font-family: "Noto Emoji", Inter, Verdana, Helvetica, sans-serif;
  font-size: 11pt;
  color: #444;
  margin: 0 0 0 0;
  padding: 0.1px 3px 3px 3px;
  border-radius: 4px;
}

div.nanopub-graph {
  background: #F3F6F9;
  padding: 12px 15px 10px 15px;
  margin-top: 3px;
  border-radius: 4px;
  min-height: 50px;
}

div.nanopub-pubinfo:first-of-type {
  margin-top: 3px;
  border-radius: 4px;
}

div.nanopub-pubinfo:last-of-type {
  border-radius: 4px;
}

span.nanopub-assertion, span.nanopub-provenance, span.nanopub-pubinfo {
  padding: 0 5px;
  margin-top: 0;
  border-radius: 5px;
}

.nanopub-textfield {
  width: 350px;
}

.nanopub-textfield.wide {
  width: 350px;
}

/* deactivate for now, because short textfields can currently also hold full URIs
.nanopub-textfield.short {
  width: 250px;
}
*/

.pubinfosection .nanopub-pubinfo {
  display: none;
}

.pubinfosection .nanopub-pubinfo:first-child {
  display: block;
}

.readonly {
  background: white;
  padding: 4px !important;
  border-radius: 2px;
  white-space: pre-wrap;
}

.litlang {
  font-size: 9pt !important;
  color: #0006 !important;
}

.litdatatype {
  font-size: 9pt !important;
  color: #0006 !important;
}

/*
.this-assertion {
  background: #99ccff;
  border-style: solid;
  border-width: 1px;
  border-color: #88aaff;
  padding: 4px;
  border-radius: 4px;
}

.this-nanopub {
  background: #ffffff;
  background-image: url(npback-left.png);
  border-width: 1px;
  border-color: #666;
  border-style: solid;
  padding: 4px 4px 4px 20px;
  border-radius: 4px;
}
*/

.nanopub-statement {
  padding: 2px 1px;
  /*text-indent: 20px hanging;*/
}

.nanopub-group .nanopub-statement {
  padding: 4px 2px;
}

.nanopub-statement a {
  line-height: 26px;
  vertical-align: top;
}

/*
.nanopub-statement input, .nanopub-statement select, .nanopub-statement textarea, .select2-container {
  margin: 2px 0;
}
*/

.nanopub-statement:after {
  content: ".";
  visibility: hidden;
  display: block;
  height: 0;
  clear: both;
}

.nanopub table {
  width: 100%;
}

.tooltip {
  position: relative;
  display: inline-block;
}
/* ... */

